<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_gravity="center"
    android:layout_height="match_parent"
    tools:context=".LoginActivity.CreateAccuont">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_gravity="center"
            android:id="@+id/my_image_regster"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/download"
            android:layout_centerInParent="true"
            />
        <ImageButton
            android:id="@+id/cma_up_load"
            android:layout_marginTop="-40dp"
            android:layout_below="@id/my_image_regster"
            android:layout_toRightOf="@id/my_image_regster"
            android:background="@drawable/ic_linked_camera_black_24dp"
            android:layout_width="30dp"
            android:layout_height="30dp"/>
    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="10dp"
        android:id="@+id/txt_name"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:textColor="#000"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="10dp"
        android:id="@+id/txt_email"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:textColor="#000"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="10dp"
        app:endIconMode="password_toggle"
        android:id="@+id/txt_password"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"

            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="10dp"
        android:id="@+id/txt_phone"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:textColor="#000"
            android:layout_height="wrap_content"
            android:hint="@string/phone"

            />
    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/create_account"
        android:padding="5dp"
        android:text="@string/join_us"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>