<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity.LoginScreen">
    <ImageView
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/img"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:src="@drawable/pp"
        android:layout_width="200dp"
        android:layout_height="190dp"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_centerInParent="true"
        android:layout_below="@id/img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/my_textbox_Email"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"


            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle"
        android:layout_margin="10dp"
        android:id="@+id/my_textbox_password"
        android:layout_below="@id/my_textbox_Email"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"

            />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:text="@string/login"
        android:layout_margin="6dp"
        android:layout_centerInParent="true"
        android:id="@+id/btn_login"
        android:layout_below="@id/my_textbox_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/gust_text"
        android:text="@string/don_t_have_account"
        android:layout_centerInParent="true"
        android:layout_margin="4dp"
        android:layout_below="@id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/createAccuont"
        android:layout_margin="4dp"
        android:text="@string/create"
        android:textColor="#0044FF"
        android:layout_below="@id/btn_login"
        android:layout_toRightOf="@id/gust_text"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/my_lin"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="3dp"
        android:orientation="horizontal"
        android:layout_below="@id/gust_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:padding="2dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="_____________"
            android:layout_weight="1.25"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:gravity="center"
            android:textColor="#000"
            android:text="@string/use_other_methods"
            android:layout_weight="1.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:padding="2dp"

            android:gravity="center"
            android:text="_____________"
            android:layout_weight="1.25"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <com.google.android.gms.common.SignInButton
        android:id="@+id/login_button_google"
        android:layout_width="45dp"
        android:layout_centerInParent="true"
        android:layout_alignParentLeft="true"
        android:layout_height="30dp"
        android:layout_below="@id/my_lin"
        android:layout_marginTop="5dp"
        android:layout_marginStart="160dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="160dp" />
    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_toRightOf="@id/login_button_google"
        android:layout_below="@id/my_lin"
        android:layout_marginTop="7dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="10dp"
        />



</RelativeLayout>